# web-crawler

./: .coverage  .gitignore  README.md  pyproject.toml
.cache/v/cache/: lastfailed
tests/: constants.py  test_crawler.py  test_helpers.py
tests/data/: index.html
web_crawler/: cli.py  crawler.py  helpers.py  link.py
