[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = ""
authors = ["Steve Barker <steve@sgbarker.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
